Sollte soweit erst einmal alles gehen, was ich geplant hatte...

--- a/app/src/main/res/layout/listitem_comment.xml
+++ b/app/src/main/res/layout/listitem_comment.xml
@@ -154,7 +154,7 @@
     <data>
         <variable
             name="comment"
-            type="com.teufelsturm.tt_downloader_kotlin.data.entity.CommentsSummit.CommentsWithRouteWithSummit" />
+            type="com.teufelsturm.tt_downloader_kotlin.data.entity.Comments.CommentsWithRouteWithSummit" />
         <variable
             name="clickListenerRoute"
             type="com.teufelsturm.tt_downloader_kotlin.feature.results.adapter.util.TTCommentClickListener" />
