--- a/app/src/main/res/layout/listitem_my_comment.xml
+++ b/app/src/main/res/layout/listitem_my_comment.xml
@@ -234,7 +234,7 @@
                 style="@style/tv_item_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:tvDateAndTypeOfAscend="@{myRouteWithPhotos}"
+                app:tvDateAndTypeOfAscend="@{myRouteWithPhotos.myTTCommentAND}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/til_image_caption"
@@ -245,7 +245,7 @@
                 style="@style/tv_item_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:tvMyAscendedPartner="@{myRouteWithPhotos}"
+                app:tvMyAscendedPartner="@{myRouteWithPhotos.myTTCommentAND}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/til_date_of_ascend"
