--- a/app/src/main/res/layout/listitem_spinner_how_ascended.xml
+++ b/app/src/main/res/layout/listitem_spinner_how_ascended.xml
@@ -10,6 +10,7 @@
     android:gravity="start"
     android:singleLine="true"
     android:textAlignment="viewStart"
-    android:textColor="@color/Black"
+    android:background="@color/white"
+    android:textColor="@color/black"
     tools:drawableStart="@drawable/ic_ruheschlinge"
     tools:text="RS: mit Ruheschlinge" />
